--- a/.github/workflows/clang-format.yml
+++ b/.github/workflows/clang-format.yml
@@ -10,6 +10,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: RafikFarhad/clang-format-github-action@v3
+      - uses: jidicula/clang-format-action@v4.10.2
         with:
-          sources: "src/**/*.h,src/**/*.c,test/**/*.c"
+          clang-format-version: "15"
