--- a/.github/workflows/clang-tidy.yml
+++ b/.github/workflows/clang-tidy.yml
@@ -13,4 +13,4 @@ jobs:
       - uses: KyleMayes/install-llvm-action@v1
         with:
           version: "15"
-      - run: clang-tidy {src,test}/**/*.c
+      - run: clang-tidy '{src,test}/**/*.c'
