--- a/.github/workflows/clang-tidy.yml
+++ b/.github/workflows/clang-tidy.yml
@@ -10,9 +10,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: KyleMayes/install-llvm-action@v1
-        with:
-          version: "15"
-      - run: sudo apt install bear
-      - run: bear -- make all test
-      - run: clang-tidy src/**/*.{c,h} test/**/*.c
+      - uses: smay1613/clang-tidy-action@master
