--- a/.github/workflows/clang-tidy.yml
+++ b/.github/workflows/clang-tidy.yml
@@ -6,8 +6,12 @@ on:
       - "main"
 
 jobs:
-  clang-format:
+  clang-tidy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: smay1613/clang-tidy-action@master
+      - uses: egor-tensin/setup-clang@v1
+        with:
+          version: 15
+      - run: apt-get -y -qq install clang-tidy
+      - run: clang-tidy src/**/*.{c,h} test/**/*.c
