--- a/.github/workflows/make-test.yml
+++ b/.github/workflows/make-test.yml
@@ -6,7 +6,7 @@ on:
       - "main"
 
 jobs:
-  clang-format:
+  make-test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
