--- a/.github/workflows/make-test.yml
+++ b/.github/workflows/make-test.yml
@@ -13,5 +13,5 @@ jobs:
       - uses: egor-tensin/setup-clang@v1
         with:
           version: 15
-      - run: sudo apt install libcriterion-dev
+      - run: sudo apt-get -y install libcriterion-dev
       - run: make test
