--- a/.github/workflows/clang-tidy.yml
+++ b/.github/workflows/clang-tidy.yml
@@ -13,5 +13,7 @@ jobs:
       - uses: egor-tensin/setup-clang@v1
         with:
           version: 15
+      - run: sudo apt-get -y install bear
+      - run: bear -- make all test
       - run: sudo apt-get -y install clang-tidy
       - run: clang-tidy src/**/*.{c,h} test/**/*.c
