--- a/.github/workflows/clang-tidy.yml
+++ b/.github/workflows/clang-tidy.yml
@@ -14,6 +14,7 @@ jobs:
         with:
           version: 15
       - run: sudo apt-get -y install bear
+      - run: sudo apt-get -y install libcriterion-dev
       - run: bear -- make all test
       - run: sudo apt-get -y install clang-tidy
       - run: clang-tidy src/**/*.{c,h} test/**/*.c
