--- a/.github/workflows/clang-tidy.yml
+++ b/.github/workflows/clang-tidy.yml
@@ -18,4 +18,4 @@ jobs:
       - run: bear -- make all test
       - run: sudo apt-get -y install clang-tidy
       - run: ls -la
-      - run: clang-tidy src/**/*.{c,h} test/**/*.c
+      - run: clang-tidy src/*.{c,h} test/*.c
