--- a/.github/workflows/clang-tidy.yml
+++ b/.github/workflows/clang-tidy.yml
@@ -13,7 +13,8 @@ jobs:
       - uses: egor-tensin/setup-clang@v1
         with:
           version: 15
+      - run: sudo add-apt-repository "deb http://apt.llvm.org/bionic/ llvm-toolchain-bionic main"
       - run: sudo apt-get -y install libcriterion-dev
+      - run: bear -- make all test
       - run: sudo apt-get -y install clang-tidy
-      - run: clang-tidy --version
       - run: make lint
