--- a/.github/workflows/clang-tidy.yml
+++ b/.github/workflows/clang-tidy.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           version: 15
       - run: sudo add-apt-repository "deb http://apt.llvm.org/bionic/ llvm-toolchain-bionic main"
-      - run: sudo apt-get -y install libcriterion-dev
+      - run: sudo apt-get -y install bear libcriterion-dev
       - run: bear -- make all test
       - run: sudo apt-get -y install clang-tidy
       - run: make lint
