--- a/.github/workflows/clang-tidy.yml
+++ b/.github/workflows/clang-tidy.yml
@@ -10,7 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - run: sudo add-apt-repository "deb http://apt.llvm.org/bionic/ llvm-toolchain-bionic-15 main"
       - run: sudo apt-get -y install bear libcriterion-dev
-      - run: sudo apt-get -y install clang clang-tidy
       - run: bear -- make all test
+      - run: sudo apt-get -y install clang-tidy
       - run: make lint
