--- a/.github/workflows/clang-tidy.yml
+++ b/.github/workflows/clang-tidy.yml
@@ -14,4 +14,6 @@ jobs:
       - run: sudo add-apt-repository "deb-src http://apt.llvm.org/bionic/ llvm-toolchain-bionic-15 main"
       - run: sudo apt-get -y install clang clang-tidy
       - run: sudo apt-get -y install libcriterion-dev
+      - run: sudo apt-get -y install bear
+      - run: bear -- make all all_tests
       - run: make lint
