--- a/.github/workflows/clang-tidy.yml
+++ b/.github/workflows/clang-tidy.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v3
       - run: sudo add-apt-repository "deb http://apt.llvm.org/bionic/ llvm-toolchain-bionic-15 main"
       - run: sudo add-apt-repository "deb-src http://apt.llvm.org/bionic/ llvm-toolchain-bionic-15 main"
-      - run: sudo apt-get -y install clang clang-tidy
+      - run: sudo apt-get -y install llvm
       - run: sudo apt-get -y install libcriterion-dev
       - run: sudo apt-get -y install bear
       - run: bear -- make all all_tests
